--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,21 @@ code {
 .cardtext {
   position: relative;
 }
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 0.8rem;
+  right: 0.8rem;
+  animation: fadeIn 700ms ease-in-out 1s both;
+  cursor: pointer;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
